Update GitHub profile link in default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="profile-links">
-                    <a href="https://github.com/your-profile" target="_blank">
+                    <a href="https://github.com/1xTP" target="_blank">
                         <i class="fab fa-github"></i> Github
                     </a>
                 </div>
